# wxCalculator

./: .gitignore  CMakeLists.txt  README.md  calculator.cpp  calculator.fbp  calculator.h
src/: calculator.cpp  calculator.h  main.cpp
